<resources>
    <string name="app_name">Story App</string>
    <string name="something_wrong">Oops.. something went wrong.</string>

    <string name="signup">Sign Up</string>
    <string name="illustration">Illustration</string>
    <string name="title_signup_page">Please complete your data below</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="message_login_page">Please enter your data</string>
    <string name="title_login_page">Ready to share your learning experiences?</string>

    <string name="story_photo">Story photo</string>
    <string name="story_username">Name</string>
    <string name="story_description">Description</string>
    <string name="not_found">Data not found</string>
    <string name="retry">Retry</string>

    <string name="logout">Logout</string>

    <string name="add_story">Add Story</string>
    <string name="image_preview">Image preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="take_photo">Take picture</string>
    <string name="switch_camera">Switch camera</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="image_not_found">Please take a picture first</string>

    <string name="map_view">Map View</string>
</resources>